force-app/main/default/objects/gaid__Gift_Aid_Distribution_Scenario__c/gaid__Gift_Aid_Distribution_Scenario__c.object-meta.xml
<CustomObject>
    <label>Gift Aid Distribution Scenario</label>
    <nameField>
        <displayFormat>GADS-{0}</displayFormat>
        <label>Gift Aid Distribution Scenario Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Aid Distribution Scenarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>