force-app/main/default/objects/gaid__Gift_Aid_Distribution_Scenario__c/fields/gaid__Account__c.field-meta.xml
<CustomField>
    <fullName>gaid__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Aid Distribution Scenarios</relationshipLabel>
    <relationshipName>Gift_Aid_Distribution_Scenarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>