force-app/main/default/objects/gaid__Gift_Aid_Distribution_Scenario__c/fields/gaid__Active__c.field-meta.xml
<CustomField>
    <fullName>gaid__Active__c</fullName>
    <formula>IF ( AND (  gaid__Enabled__c,  gaid__Contact__r.gaid__Active_Gift_Aid_Declarations__c &gt; 0 ) , true , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>