force-app/main/default/objects/gaid__Gift_Aid_Distribution_Scenario__c/fields/gaid__Contact__c.field-meta.xml
<CustomField>
    <fullName>gaid__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Aid Distribution Scenarios</relationshipLabel>
    <relationshipName>Gift_Aid_Distribution_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>