force-app/main/default/objects/gaid__Gift_Aid_Distribution_Scenario__c/fields/gaid__Declaration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>gaid__Declaration_Start_Date__c</fullName>
    <formula>gaid__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declaration Start Date</label>
    <type>Date</type>
</CustomField>