force-app/main/default/objects/gaid__Gift_Aid_Distribution_Scenario__c/fields/gaid__Declaration_Type__c.field-meta.xml
<CustomField>
    <fullName>gaid__Declaration_Type__c</fullName>
    <formula>TEXT (gaid__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declaration Type</label>
    <type>Text</type>
</CustomField>