force-app/main/default/objects/gaid__Gift_Aid_Distribution_Scenario__c/fields/gaid__Enabled__c.field-meta.xml
<CustomField>
    <fullName>gaid__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>