force-app/main/default/objects/gaid__Gift_Aid_Distribution_Scenario__c/fields/gaid__Set_Percentage__c.field-meta.xml
<CustomField>
    <fullName>gaid__Set_Percentage__c</fullName>
    <label>Set Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>